--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
-<!DOCTYPE html><html lang="en"><head><meta charSet="utf-8"/><meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1"/><title>Publishers Clearing House</title><link rel="shortcut icon" href="https://shor.by/favicon.ico?1" type="image/x-icon"/><link rel="apple-touch-icon" href="/touch-icons/apple-touch-icon.png"/><link rel="apple-touch-icon" sizes="57x57" href="/touch-icons/apple-touch-icon-57x57.png"/><link rel="apple-touch-icon" sizes="72x72" href="/touch-icons/apple-touch-icon-72x72.png"/><link rel="apple-touch-icon" sizes="76x76" href="/touch-icons/apple-touch-icon-76x76.png"/><link rel="apple-touch-icon" sizes="114x114" href="/touch-icons/apple-touch-icon-114x114.png"/><link rel="apple-touch-icon" sizes="120x120" href="/touch-icons/apple-touch-icon-120x120.png"/><link rel="apple-touch-icon" sizes="144x144" href="/touch-icons/apple-touch-icon-144x144.png"/><link rel="apple-touch-icon" sizes="152x152" href="/touch-icons/apple-touch-icon-152x152.png"/><link rel="apple-touch-icon" sizes="180x180" href="/touch-icons/apple-touch-icon-180x180.png"/><link href="https://shor.by/css/main.css" rel="stylesheet"/><link href="https://shor.by/css/shorby-page.css?dc02a642" rel="stylesheet"/><meta property="og:type" content="article"/><meta property="og:image" content="https://cdn.filestackcontent.com/s6n39sz7SoqAppcfeDyM"/><meta property="og:title" content="Publishers Clearing House"/>
+<!DOCTYPE html>
+<html lang="en">
+<head><meta charSet="utf-8"/>
+<meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1"/>
+<title>Publishers Clearing House</title><link rel="shortcut icon" href="https://shor.by/favicon.ico?1" type="image/x-icon"/>
+
+<link rel="apple-touch-icon" href="/touch-icons/apple-touch-icon.png"/><link rel="apple-touch-icon" sizes="57x57" href="/touch-icons/apple-touch-icon-57x57.png"/><link rel="apple-touch-icon" sizes="72x72" href="/touch-icons/apple-touch-icon-72x72.png"/><link rel="apple-touch-icon" sizes="76x76" href="/touch-icons/apple-touch-icon-76x76.png"/><link rel="apple-touch-icon" sizes="114x114" href="/touch-icons/apple-touch-icon-114x114.png"/><link rel="apple-touch-icon" sizes="120x120" href="/touch-icons/apple-touch-icon-120x120.png"/><link rel="apple-touch-icon" sizes="144x144" href="/touch-icons/apple-touch-icon-144x144.png"/><link rel="apple-touch-icon" sizes="152x152" href="/touch-icons/apple-touch-icon-152x152.png"/><link rel="apple-touch-icon" sizes="180x180" href="/touch-icons/apple-touch-icon-180x180.png"/><link href="https://shor.by/css/main.css" rel="stylesheet"/><link href="https://shor.by/css/shorby-page.css?dc02a642" rel="stylesheet"/>
+
+<meta property="og:type" content="article"/>
+<meta property="og:image" content="https://cdn.filestackcontent.com/s6n39sz7SoqAppcfeDyM"/>
+<meta property="og:title" content="Publishers Clearing House"/>
 <!-- 
 <base href="https://shor.by">
 -->
 
-            </head><body class="theme-custom custom-theme"><noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WCJDT87" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript><style type="text/css">
+</head><body class="theme-custom custom-theme"><noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WCJDT87" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript><style type="text/css">
 .theme-custom{
 background: #14577B;
 background-size: cover;
@@ -58,7 +68,7 @@ color: #000000;
         <!--  -->
         <!--  -->
         <!--  -->
-        <li id="block0" class="links-block"><a href="main.html" class="block-item layout-countdown card-style">
+        <li id="block0" class="links-block"><a href="register.html" class="block-item layout-countdown card-style">
     <div class="block-image">
         <!--  
         <img src="https://cdn.filestackcontent.com/compress=m:true/quality=v:80/cache=expiry:max/no_metadata/6Sj3Yf4NRsC7JBS6oXpo" alt=""/>
