Sign in removed

--- a/main.html
+++ b/main.html
@@ -209,8 +209,9 @@ context["UniNavMessages"] = []
             <!-- unrecognized -->
     <nav class="uninav__components uninav__unrecognized">
         <ul class="uninav__components-list">
-            <li>
-                <a href="https://mpo.pch.com/register/weekly-grand-prize-sign-up?adt=ciCHjwK4sXCfG93as2dxfxAStL0DDGSuNHRuzPUqe0BmOi8vIzpKL3pxWj5lt2L2LhYg9yqe3gJMFrfpa1hSz1PMzpjM6yj9FyzpFM6n39g4J9zMPMlpv1h9z82LGZgAlV19Q1Tqe2psp19yAzyHC3phMuEuW3MFoTqe1os1xIJIKnJCgphyuE3O3KPnwqe1Ms1TS2LTpgMcS942I2qe2nyK5klqe25JL3KxnlOycKIaWIo0ow90525JMHC0qei55Vwqe0IzEDMl9lWR52o0owMuWukTEzo2Hmpiu5Wz&amp;cpr=1" data-ga-tealium_event="sign_in_initiated" data-ga-click_name="sign in" data-ga-click_location="header" class="uninav__sign-in uninav__button link-button">Sign In</a>
+            <li><!--  
+                <a href="./" data-ga-tealium_event="sign_in_initiated" data-ga-click_name="sign in" data-ga-click_location="header" class="uninav__sign-in uninav__button link-button">Sign Up</a>
+                 -->
             </li>
         </ul>
     </nav>
