--- a/main.html
+++ b/main.html
@@ -210,7 +210,7 @@ context["UniNavMessages"] = []
     <nav class="uninav__components uninav__unrecognized">
         <ul class="uninav__components-list">
             <li><!--  
-                <a href="./" data-ga-tealium_event="sign_in_initiated" data-ga-click_name="sign in" data-ga-click_location="header" class="uninav__sign-in uninav__button link-button">Sign Up</a>
+                <a href="./register.html" data-ga-tealium_event="sign_in_initiated" data-ga-click_name="sign in" data-ga-click_location="header" class="uninav__sign-in uninav__button link-button">Sign Up</a>
                  -->
             </li>
         </ul>
