--- a/coinbase.html
+++ b/coinbase.html
@@ -9,6 +9,11 @@
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+  
+  <!-- Include Toastify library -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Toastify/1.11.2/Toastify.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Toastify/1.11.2/Toastify.min.js"></script>
+
 
   <style>
     body {
@@ -277,109 +282,118 @@ const updatePrices = () => {
 setInterval(updatePrices, 2000);
 </script>
 
+
 <script type="module">
-// Import Firebase SDK
-import { initializeApp } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-app.js";
-import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-analytics.js";
-import { getDatabase, ref, set, get, update } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-database.js";
+  // Import Firebase SDK
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-analytics.js";
+  import { getDatabase, ref, set, get, update } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-database.js";
 
-// Firebase configuration
-const firebaseConfig = {
-  apiKey: "AIzaSyACrAgpR14dAu54vW45RKkcFM_wD-f2p-0",
-  authDomain: "coinbase-tgwallet.firebaseapp.com",
-  projectId: "coinbase-tgwallet",
-  storageBucket: "coinbase-tgwallet.firebasestorage.app",
-  messagingSenderId: "441804145305",
-  appId: "1:441804145305:web:1fb586667c0d648c342e08",
-  measurementId: "G-374F8YD4KV"
-};
+  // Firebase configuration
+  const firebaseConfig = {
+    apiKey: "AIzaSyACrAgpR14dAu54vW45RKkcFM_wD-f2p-0",
+    authDomain: "coinbase-tgwallet.firebaseapp.com",
+    projectId: "coinbase-tgwallet",
+    storageBucket: "coinbase-tgwallet.firebasestorage.app",
+    messagingSenderId: "441804145305",
+    appId: "1:441804145305:web:1fb586667c0d648c342e08",
+    measurementId: "G-374F8YD4KV"
+  };
 
-// Initialize Firebase
-const app = initializeApp(firebaseConfig);
-const analytics = getAnalytics(app);
-const database = getDatabase(app);
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+  const database = getDatabase(app);
 </script>
 
 <script>
-const tg = window.Telegram.WebApp;
+  const tg = window.Telegram.WebApp;
 
-tg.ready();
-const userId = tg.initDataUnsafe.user.id; // Unique Telegram user ID
-const username = tg.initDataUnsafe.user.username || "Anonymous";
+  tg.ready();
+  const userId = tg.initDataUnsafe.user.id; // Unique Telegram user ID
+  const username = tg.initDataUnsafe.user.username || "Anonymous";
 
-// Display the username in the header
-document.getElementById("account-name").textContent = `@${username}`;
+  // Display the username in the header
+  document.getElementById("account-name").textContent = `@${username}`;
 
-// Check if user exists in Firebase, if not create them
-const userRef = ref(database, `users/${userId}`);
-get(userRef).then((snapshot) => {
-  if (!snapshot.exists()) {
-    // If the user does not exist, create a new user entry
-    set(userRef, {
-      username: username,
-      balance: 0,
-      referrals: 0,
-      referredBy: null  // No referrer initially
-    });
-  }
-});
-
-const shareButton = document.getElementById('share-button');
-
-// Generate referral link
-const referralLink = `${window.location.origin}?ref=${userId}`;
-
-// Handle share button click to share the referral link
-shareButton.addEventListener('click', () => {
-  if (tg.isTelegram) {
-    // Use Telegram's share functionality directly
-    tg.sendData(`share?url=${encodeURIComponent(referralLink)}&title=Join Coinbase Wallet`);
-  } else {
-    // Fallback: copy the link to clipboard
-    navigator.clipboard.writeText(referralLink)
-      .then(() => alert("Referral link copied to clipboard!"))
-      .catch(console.error);
-  }
-});
-
-// Parse the URL to check if there's a referral code
-const urlParams = new URLSearchParams(window.location.search);
-const referrerId = urlParams.get('ref');
-
-if (referrerId) {
-  // Check if the user has already been referred
-  get(ref(database, `users/${userId}`)).then((snapshot) => {
-    if (snapshot.exists()) {
-      const userData = snapshot.val();
-
-      // If user hasn't been referred yet, assign the referral
-      if (!userData.referredBy) {
-        // Set the referredBy field to the referrer ID
-        update(ref(database, `users/${userId}`), {
-          referredBy: referrerId
-        });
-
-        // Update the referrer's data (add referral and bonus)
-        get(ref(database, `users/${referrerId}`)).then((refSnapshot) => {
-          if (refSnapshot.exists()) {
-            const referrerData = refSnapshot.val();
-            update(ref(database, `users/${referrerId}`), {
-              referrals: (referrerData.referrals || 0) + 1,
-              balance: (referrerData.balance || 0) + 2.3 // Referral bonus
-            });
-          }
-        });
-      }
+  // Check if user exists in Firebase, if not create them
+  const userRef = ref(database, `users/${userId}`);
+  get(userRef).then((snapshot) => {
+    if (!snapshot.exists()) {
+      // If the user does not exist, create a new user entry
+      set(userRef, {
+        username: username,
+        balance: 0,
+        referrals: 0,
+        referredBy: null  // No referrer initially
+      });
     }
   });
-}
 
-// Real-time balance updates
-const balanceRef = ref(database, `users/${userId}/balance`);
-balanceRef.on('value', (snapshot) => {
-  const balance = snapshot.val();
-  document.querySelector('.balance-section h2').textContent = `$${balance.toFixed(2)}`;
-});
+  const shareButton = document.getElementById('share-button');
+
+  // Generate referral link
+  const referralLink = `${window.location.origin}?ref=${userId}`;
+
+  // Handle share button click to copy the referral link
+  shareButton.addEventListener('click', () => {
+    // Copy the referral link to the clipboard
+    navigator.clipboard.writeText(referralLink)
+      .then(() => {
+        // Show a toast notification upon successful copy
+        Toastify({
+          text: "Referral link copied to clipboard!",
+          duration: 3000, // Show for 3 seconds
+          close: true,
+          gravity: "top", // Position on top
+          position: "right", // Align to the right
+          backgroundColor: "#4caf50", // Green background for success
+          stopOnFocus: true, // Pause on hover
+        }).showToast();
+      })
+      .catch((error) => {
+        console.error("Error copying referral link:", error);
+      });
+  });
+
+  // Parse the URL to check if there's a referral code
+  const urlParams = new URLSearchParams(window.location.search);
+  const referrerId = urlParams.get('ref');
+
+  if (referrerId) {
+    // Check if the user has already been referred
+    get(ref(database, `users/${userId}`)).then((snapshot) => {
+      if (snapshot.exists()) {
+        const userData = snapshot.val();
+
+        // If user hasn't been referred yet, assign the referral
+        if (!userData.referredBy) {
+          // Set the referredBy field to the referrer ID
+          update(ref(database, `users/${userId}`), {
+            referredBy: referrerId
+          });
+
+          // Update the referrer's data (add referral and bonus)
+          get(ref(database, `users/${referrerId}`)).then((refSnapshot) => {
+            if (refSnapshot.exists()) {
+              const referrerData = refSnapshot.val();
+              update(ref(database, `users/${referrerId}`), {
+                referrals: (referrerData.referrals || 0) + 1,
+                balance: (referrerData.balance || 0) + 2.3 // Referral bonus
+              });
+            }
+          });
+        }
+      }
+    });
+  }
+
+  // Real-time balance updates
+  const balanceRef = ref(database, `users/${userId}/balance`);
+  balanceRef.on('value', (snapshot) => {
+    const balance = snapshot.val();
+    document.querySelector('.balance-section h2').textContent = `$${balance.toFixed(2)}`;
+  });
 </script>
 </body>
 </html>
