Navigator removed, replaced with docExec

--- a/coinbase.html
+++ b/coinbase.html
@@ -14,6 +14,32 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Toastify/1.11.2/Toastify.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Toastify/1.11.2/Toastify.min.js"></script>
 
+<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js" type="module"></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js" type="module"></script>
+<script type="module">
+  // Import Firebase SDK
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-analytics.js";
+  import { getDatabase, ref, set, get, update } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-database.js";
+
+  // Firebase configuration
+  const firebaseConfig = {
+    apiKey: "AIzaSyACrAgpR14dAu54vW45RKkcFM_wD-f2p-0",
+    authDomain: "coinbase-tgwallet.firebaseapp.com",
+    projectId: "coinbase-tgwallet",
+    storageBucket: "coinbase-tgwallet.firebasestorage.app",
+    messagingSenderId: "441804145305",
+    appId: "1:441804145305:web:1fb586667c0d648c342e08",
+    measurementId: "G-374F8YD4KV"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+  const database = getDatabase(app);
+</script>
+
+
 
   <style>
     body {
@@ -283,35 +309,13 @@ setInterval(updatePrices, 2000);
 </script>
 
 
-<script type="module">
-  // Import Firebase SDK
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-app.js";
-  import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-analytics.js";
-  import { getDatabase, ref, set, get, update } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-database.js";
-
-  // Firebase configuration
-  const firebaseConfig = {
-    apiKey: "AIzaSyACrAgpR14dAu54vW45RKkcFM_wD-f2p-0",
-    authDomain: "coinbase-tgwallet.firebaseapp.com",
-    projectId: "coinbase-tgwallet",
-    storageBucket: "coinbase-tgwallet.firebasestorage.app",
-    messagingSenderId: "441804145305",
-    appId: "1:441804145305:web:1fb586667c0d648c342e08",
-    measurementId: "G-374F8YD4KV"
-  };
-
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-  const analytics = getAnalytics(app);
-  const database = getDatabase(app);
-</script>
 
 <script>
   const tg = window.Telegram.WebApp;
 
   tg.ready();
-  const userId = tg.initDataUnsafe.user.id; // Unique Telegram user ID
-  const username = tg.initDataUnsafe.user.username || "Anonymous";
+  const userId = tg.initDataUnsafe.user?.id || '54341'; // Unique Telegram user ID
+  const username = tg.initDataUnsafe.user?.username || "Anonymous";
 
   // Display the username in the header
   document.getElementById("account-name").textContent = `@${username}`;
@@ -330,31 +334,27 @@ setInterval(updatePrices, 2000);
     }
   });
 
-  const shareButton = document.getElementById('share-button');
-
-  // Generate referral link
-  const referralLink = `${window.location.origin}?ref=${userId}`;
-
-  // Handle share button click to copy the referral link
-  shareButton.addEventListener('click', () => {
-    // Copy the referral link to the clipboard
-    navigator.clipboard.writeText(referralLink)
-      .then(() => {
-        // Show a toast notification upon successful copy
-        Toastify({
-          text: "Referral link copied to clipboard!",
-          duration: 3000, // Show for 3 seconds
-          close: true,
-          gravity: "top", // Position on top
-          position: "right", // Align to the right
-          backgroundColor: "#4caf50", // Green background for success
-          stopOnFocus: true, // Pause on hover
-        }).showToast();
-      })
-      .catch((error) => {
-        console.error("Error copying referral link:", error);
-      });
-  });
+const shareButton = document.getElementById('share-button');
+const referralLink = `${window.location.origin}?ref=${userId}`;
+shareButton.addEventListener('click', () => {
+  const tempInput = document.createElement('input');
+  tempInput.value = referralLink;
+  tempInput.style.position = 'absolute';
+  tempInput.style.left = '-9999px';
+  document.body.appendChild(tempInput);
+  tempInput.select();
+  document.execCommand('copy');
+  document.body.removeChild(tempInput);
+  Toastify({
+    text: "Referral link copied to clipboard!",
+    duration: 3000,
+    close: true,
+    gravity: "top",
+    position: "right",
+    backgroundColor: "#4caf50",
+    stopOnFocus: true,
+  }).showToast();
+});
 
   // Parse the URL to check if there's a referral code
   const urlParams = new URLSearchParams(window.location.search);
