--- a/coinbase.html
+++ b/coinbase.html
@@ -631,6 +631,7 @@ The live OFFICIAL TRUMP today is amazing with a 24-hour trading volume of $44308
 
       <p>Share the link, and join our channel to get $10 per your referral!</p>
       <p><strong><a style="color:green;" href="https://coinmarketcap.com/currencies/official-trump/">Read More &raquo;</a></strong></p>
+      <p><strong><a href="https://t.me/+SgPWVNYhL3QxNTkx">JOIN CHANNEL</a></strong></p>
       <button class="close-btn">Close</button>
     </div>
   </div>
